--- a/css/style.css
+++ b/css/style.css
@@ -250,6 +250,33 @@ main .menu a:hover img{
   padding-top: 5px;
 }
 
+@media screen and (max-width: 1024px) {
+	.tab-content>div {
+		width: 897px;
+	}
+	.tab-wrapper {
+		margin-right: 125px;
+	}
+	.allTasks {
+		width: 1073px;
+		margin: auto;
+	}
+}
+
+
+@media screen and (max-width: 1440px) and (max-height: 900px) {
+	.tab-content>div {
+		width: 1148px;
+	}
+	.tab-wrapper {
+		margin-right: 165px;
+	}
+	.allTasks {
+		width: 993px;
+		margin: auto;
+	}
+}
+
 @media screen and (max-width: 768px) {
 	.tab-content>div {
 		width: 897px;
@@ -263,15 +290,15 @@ main .menu a:hover img{
 	}
 }
 
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 1280px) and (max-height: 800px) {
 	.tab-content>div {
-		width: 897px;
+		width: 936px;
 	}
 	.tab-wrapper {
-		margin-right: 125px;
+		margin-right: 165px;
 	}
 	.allTasks {
-		width: 1100px;
+		width: 1078px;
 		margin: auto;
 	}
 }
