--- a/css/style.css
+++ b/css/style.css
@@ -146,7 +146,7 @@ main .menu a:hover img{
 .tab-content>div {
   background-color: #028e9b;
   box-sizing: border-box;
-  width: 1660px;
+  width: 1685px;
   padding: 16px;
   color: #000;
   white-space:nowrap;
@@ -249,20 +249,11 @@ main .menu a:hover img{
 .checkAnswers {
   padding-top: 5px;
 }
-
-@media screen and (max-width: 1024px) {
-	.tab-content>div {
-		width: 897px;
-	}
-	.tab-wrapper {
-		margin-right: 125px;
-	}
-	.allTasks {
-		width: 1073px;
-		margin: auto;
+@media screen and (max-width: 1920px) {
+	.tab-wrapper{
+		margin-right: 365px;
 	}
 }
-
 
 @media screen and (max-width: 1440px) and (max-height: 900px) {
 	.tab-content>div {
@@ -273,6 +264,36 @@ main .menu a:hover img{
 	}
 	.allTasks {
 		width: 993px;
+		margin: auto;
+	}
+}
+
+
+@media screen and (max-width: 1280px) and (max-height: 800px) {
+	.tab-content>div {
+		width: 1085px;
+	}
+	.tab-wrapper {
+		margin-right: 165px;
+	}
+	.allTasks {
+		width: 1078px;
+		margin: auto;
+	}
+	main .menu a img {
+		width: 145px;
+	}
+}
+
+@media screen and (max-width: 1024px) {
+	.tab-content>div {
+		width: 897px;
+	}
+	.tab-wrapper {
+		margin-right: 125px;
+	}
+	.allTasks {
+		width: 1073px;
 		margin: auto;
 	}
 }
@@ -289,17 +310,3 @@ main .menu a:hover img{
 		margin: auto;
 	}
 }
-
-@media screen and (max-width: 1280px) and (max-height: 800px) {
-	.tab-content>div {
-		width: 936px;
-	}
-	.tab-wrapper {
-		margin-right: 165px;
-	}
-	.allTasks {
-		width: 1078px;
-		margin: auto;
-	}
-}
-
