--- a/css/style.css
+++ b/css/style.css
@@ -96,7 +96,6 @@ main .menu a:hover img{
   background: #b9e9e8;
 }
 .app header {
-  text-align: left;
   z-index: 999;
 }
 .app header .logo,
@@ -135,7 +134,9 @@ main .menu a:hover img{
   z-index:0;
   transition: all .3s;
 }
-
+header span {
+	padding: 20px;
+}
 .tab-menu li.active {
   color:#464646;
   opacity: 1;
@@ -421,6 +422,8 @@ main .menu a:hover img{
 }
 .edit-panel {
 	margin-top: 20px;
+    	padding: 30px;
+	float: left;
 }
 .profile-achive {
 	margin-top: 276px;
@@ -433,4 +436,20 @@ main .menu a:hover img{
 	float: left;
 	font-size: 1.2rem;
    	font-weight: 700;
+}
+.task-list {
+	padding: 5px;
+	text-decoration: none;
+}
+.ul-list {
+	height: 20px;
+	display: block;
+	text-align: left; 
+	width: 400pt;
+}
+.task-name {
+    padding-bottom: 20px;
+    font-size: 35px;
+    font-weight: 800;
+    color: #1e6d74;
 }
