--- a/css/style.css
+++ b/css/style.css
@@ -98,6 +98,7 @@ main .menu a:hover img{
 }
 .app header {
   z-index: 999;
+  height: 140px;
 }
 .app header .logo,
 .app header .tabs {
@@ -105,15 +106,15 @@ main .menu a:hover img{
 }
 .app header .logo {
   text-align: center;
+  float: left;
 }
 .app header .logo img {
-  width: 150px;
+  width: 120px;
   display: block;
 }
 .app header .logo span {
   font-size: .6em;
   text-transform: uppercase;
-  margin-left: 3px;
   font-weight: 900;
 }
 .app main {
@@ -488,27 +489,59 @@ header span {
 .left-header {
 	float: left;
 	position: absolute;
-    	left: 660px;
-	background-color: #1e6d74;
-    	font-size: 1.0rem;
+	color: #1e6d74;
+    	left: 395px;
+    	font-size: 2.5rem;
 	font-weight: 700;
 	padding: 9px;
+    	padding-top: 0px;
 }
 
 .right-header {
 	float: right;
-	background-color: #1e6d74;
+	color: #1e6d74;
 	position: absolute;
-    	right: 650px;
-    	font-size: 1.0rem;
+    	right: 325px;
+    	font-size: 2.5rem;
 	font-weight: 700;
 	padding: 9px;
+    	padding-top: 0px;
 }
 .headers-div {
 	padding-bottom: 50px;
 }
-.ul-list { 
-  	columns: 2;
-  	-webkit-columns: 2;
-  	-moz-columns: 2;
+
+.edit-menu a{
+  	display: inline-block;
+  	margin: 19px;
+  	padding-right: 10px;
+  	font-size: 1.1rem;
+  	margin-bottom: 50px;
+  	text-transform: uppercase;
+  	font-weight: 900;
+  	color: #1d3740;
+  	text-decoration: none;
+}
+.edit-menu a img {
+  	display: block;
+  	width: 380px;
+  	margin-bottom: 15px;
+  	transition: all .3s;
+}
+
+.edit-menu {
+    	position: absolute;
+    	left: 0;
+    	right: 0;
+    	margin: 0 auto;
+    	bottom: 360px;
+ }
+.select-task {
+	color: #1e6d74;
+  	text-decoration: none;
+	display: block;
+	padding: 2px;
+}
+.select-block {
+	margin-top: 10px;
 }
