--- a/css/style.css
+++ b/css/style.css
@@ -196,7 +196,7 @@ main .menu a:hover img {
 .allTasks {
     padding-bottom: 20px;
     margin: 0 auto;
-    width: 980px;
+    width: 45%;
 }
 .tasks {
     margin-top: 15px;
