--- a/css/style.css
+++ b/css/style.css
@@ -552,17 +552,16 @@ main .menu a:hover img {
 .NavButton {
     font-size: 30px;
     cursor: pointer;
-    width: 20px;
+    width: 10px;
     float: left;
-    top: 40%;
+    top: 50%;
     left: 0;
     position: fixed;
-    height: 200px;
-    opacity: 0.6;
+    height: 5%;
     z-index: 10000;
     background-color: #1e6d74;
     padding: 20px;
-    border-radius: 0px 20px 20px 0px;
+    border-radius: 30px;
 }
 .NavButton:not(:hover) {
     opacity: 0.6;
