--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,9 @@ header {
     font-size: 1.7rem;
     font-weight: 700;
     padding: 20px;
+	-webkit-box-shadow: 0px 6px 43px 13px rgba(0,0,0,0.42);
+	-moz-box-shadow: 0px 6px 43px 13px rgba(0,0,0,0.42);
+	box-shadow: 0px 6px 43px 13px rgba(0,0,0,0.42);
 }
 main {
     position: absolute;
@@ -473,7 +476,6 @@ main .menu a:hover img {
 }
 .edit-menu a img {
     display: block;
-    width: 380px;
     margin-bottom: 15px;
     transition: all .3s;
 }
@@ -555,7 +557,7 @@ main .menu a:hover img {
     width: 10px;
     float: left;
     top: 50%;
-    left: 0;
+    left: 3px;
     position: fixed;
     height: 5%;
     z-index: 10000;
