--- a/css/style.css
+++ b/css/style.css
@@ -265,11 +265,14 @@ main .menu a:hover img {
     font-size: 16px;
     font-weight: 600;
 }
+
 @media screen and (max-width: 1920px) {
     .tab-wrapper {
         margin-right: 365px;
     }
 }
+
+/* LAPTOP WITH HiDPI SCREEN */
 @media screen and (max-width: 1440px) and (max-height: 900px) {
     .tab-content>div {
         width: 1161px;
@@ -281,7 +284,40 @@ main .menu a:hover img {
         width: 993px;
         margin: auto;
     }
+	.cat-img {
+		
+	}
+	canvas {
+		top: 1%;
+		height: 25%;
+		right: 84.3% !important;
+	}
+	div#calendar {
+		right: 82% !important;
+		top: 2% !important;
+	}
+	a.edit-button {
+		right: 10px !important;
+	}
+	a.edit-button.account-login {
+		right: 80px !important;
+	}
+	.login-img {
+		top: 10px;
+		right: 1px;
+		position: absolute
+	}
+	.backp-img {
+		padding-top: 70px !important;
+		right: 50px !important;
+		height: calc(100vh - 586px) !important;
+	}
+	.cat-img {
+		padding-top: 5.8% !important;
+		padding-left: 10px !important;
+	}
 }
+/* LAPTOP WITH MDPI SCREEN */
 @media screen and (max-width: 1280px) and (max-height: 800px) {
     .tab-content>div {
         width: 1049px;
@@ -294,9 +330,51 @@ main .menu a:hover img {
         margin: auto;
     }
     main .menu a img {
-        width: 145px;
+        width: 100px;
     }
+	div#calendar {
+		right: 82% !important;
+		top: 2% !important;
+	}
+	a.edit-button {
+		right: 10px !important;
+	}
+	canvas {
+		height: 25%;
+		bottom: 80%;
+		top: 0;
+	}
+	.cat-img {
+		height: calc(100vh - 586px) !important;
+	}
+	main {
+		height: calc(100vh - 196px);
+		margin-top: 40px;
+	}
+	main .menu {
+		margin-top: 5%;
+	}
+	.backp-img {
+		padding-top: 110px !important;
+		height: calc(100vh - 550px) !important;
+		bottom: 4px;
+	}
+	.cat-img {
+		padding-top: 8.5% !important;
+	}
+	
+	a.edit-button.account-login {
+		right: 60px !important;
+		top: 100px !important;
+	}
+	
+	div#calendar {
+		padding-top: 110px!important;
+		padding-left: 20px;
+		left: 10px;
+	}
 }
+
 @media screen and (max-width: 1024px) {
     .tab-content>div {
         width: 897px;
@@ -309,6 +387,7 @@ main .menu a:hover img {
         margin: auto;
     }
 }
+
 @media screen and (max-width: 768px) {
     .tab-content>div {
         width: 897px;
@@ -707,4 +786,22 @@ main .menu a:hover img {
 	display: none;
 	text-decoration: none;
 	color: #154c51;
+}
+.cat-img {
+	float: left; 
+	padding-top: 26.8%;
+	padding-left: 100px;
+}
+.backp-img {
+	float: right; 
+	padding-top: 420px; 
+	margin-left: 240px;
+	right: 100px; 
+	position: absolute; 
+	height: calc(100vh - 596px);
+}
+.login-img {
+	float: right; 
+	width: 23%; 
+	margin-right: 20px
 }
